--- a/mysite/templates/home.html
+++ b/mysite/templates/home.html
@@ -105,11 +105,7 @@
                 <div class="d-grid gap-2 my-4">
                   <a href="{{ product.get_url }}" class="btn btn-warning bold-btn">View Details</a>
                 </div>
-                <div class="clearfix mb-1">   
-                  <span class="float-end"><a href="{% url 'add_to_wishlist' product.slug %}">
-                     <i class="far fa-heart" style="cursor: pointer"></i></a>
-                  </span>
-                </div>
+              
                 
               </div>
             </div>
@@ -122,38 +118,9 @@
       
 
      <!-- Products end -->
-     
-    <!-- Subscribe Start -->
-    <div class="container-fluid bg-secondary my-5">
-        <div class="row justify-content-md-center py-5 px-xl-5">
-            <div class="col-md-6 col-12 py-5">
-                <div class="text-center mb-2 pb-2">
-                    <h2 class="section-title px-5 mb-3"><span class="bg-secondary px-2">Stay Updated</span></h2>
-                    <p>Amet lorem at rebum amet dolores. Elitr lorem dolor sed amet diam labore at justo ipsum eirmod duo labore labore.</p>
-                </div>
-                <form action="">
-                    <div class="input-group">
-                        <input type="text" class="form-control border-white p-4" placeholder="Email Goes Here">
-                        <div class="input-group-append">
-                            <button class="btn btn-primary px-4">Subscribe</button>
-                        </div>
-                    </div>
-                </form>
-            </div>
-        </div>
-    </div>
-    <!-- Subscribe End -->
-
-
- 
-
-   
-
-
-
     <!-- Back to Top -->
     <a href="#" class="btn btn-primary back-to-top"><i class="fa fa-angle-double-up"></i></a>
-
+<!-- Back to Top end -->
 
     <!-- JavaScript Libraries -->
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
