--- a/mysite/templates/includes/navbar.html
+++ b/mysite/templates/includes/navbar.html
@@ -46,7 +46,7 @@
                 <a class="text-dark pl-2" href="">
                     <i class="fab fa-youtube"></i>
                 </a>
-                <a class="text-dark pl-2" href="">
+                <a class="text-dark pl-2" href="whatsapp:contact=+918086374853@s.whatsapp.com&message="I'd like to chat with you">
                     <i class="fab fa-whatsapp"></i>
                 </a>
             </div>
