--- a/mysite/templates/store/checkout.html
+++ b/mysite/templates/store/checkout.html
@@ -29,22 +29,18 @@
         </div>
         <div class="col-lg-6 text-center text-lg-right">
             <div class="d-inline-flex align-items-center">
-                <a class="text-dark px-2" href="">
+                <a class="text-dark px-2" href="https://www.facebook.com/Nishad P">
                     <i class="fab fa-facebook-f"></i>
                 </a>
-                <a class="text-dark px-2" href="">
-                    <i class="fab fa-twitter"></i>
-                </a>
-                <a class="text-dark px-2" href="">
+               
+                <a class="text-dark px-2" href="https://www.linkedin.com/Nishad P">
                     <i class="fab fa-linkedin-in"></i>
                 </a>
-                <a class="text-dark px-2" href="">
+                <a class="text-dark px-2" href="https://www.instagram.com/nishad3600">
                     <i class="fab fa-instagram"></i>
                 </a>
-                <a class="text-dark pl-2" href="">
-                    <i class="fab fa-youtube"></i>
-                </a>
-                <a class="text-dark pl-2" href="">
+            
+                <a class="text-dark px-2" href="https://api.whatsapp.com/send/?phone=918086374853&text&type=phone_number&app_absent=0">
                     <i class="fab fa-whatsapp"></i>
                 </a>
             </div>
