--- a/mysite/templates/admin/view_category.html
+++ b/mysite/templates/admin/view_category.html
@@ -65,7 +65,7 @@
                         <div class="row"> 
                          
                           <table class="table">
-                            <thead class="thead-dark">
+                            <thead class="thead bg-secondary">
                               <tr>
                                 <th scope="col">Category Name</th>
                                 <th scope="col">Slug</th>
