--- a/mysite/templates/admin/view_account.html
+++ b/mysite/templates/admin/view_account.html
@@ -65,7 +65,7 @@
                     <div class="card-body">
                         <div class="row"> 
                             <table class="table">
-                                <thead class="thead-dark">
+                                <thead class="thead bg-secondary">
                                   <tr>
                                    
                                     <th scope="col">Full Name</th>
