--- a/mysite/templates/admin/view_payment.html
+++ b/mysite/templates/admin/view_payment.html
@@ -64,7 +64,7 @@
                     <div class="card-body">
                         <div class="row"> 
                             <table class="table">
-                                <thead class="thead-dark">
+                                <thead class="thead bg-secondary">
                                   <tr>
                                     <th scope="col">User</th>
                                     <th scope="col">Order ID</th>
