--- a/mysite/templates/admin/view_review.html
+++ b/mysite/templates/admin/view_review.html
@@ -66,7 +66,7 @@
                     <div class="card-body">
                         <div class="row"> 
                             <table class="table">
-                                <thead class="thead-dark">
+                                <thead class="thead bg-secondary">
                                   <tr>
                                     <th scope="col">Product</th>
                                     <th scope="col">User</th>
