--- a/mysite/templates/admin/view_variation.html
+++ b/mysite/templates/admin/view_variation.html
@@ -63,7 +63,7 @@
                     <div class="card-body">
                         <div class="row"> 
                             <table class="table">
-                                <thead class="thead-dark">
+                                <thead class="thead bg-secondary">
                                   <tr>
                                     <th scope="col">Product</th>
                                     <th scope="col">Variation Category</th>
