--- a/mysite/templates/admin/edit_product.html
+++ b/mysite/templates/admin/edit_product.html
@@ -45,7 +45,7 @@
    <!-- Page Header Start -->
    <div class="container-fluid bg-secondary mb-5">
     <div class="d-flex flex-column align-items-center justify-content-center" style="min-height: 60px">
-        <h1 class="font-weight-semi-bold text-uppercase mb-3" style="font-family:Georgia, 'Times New Roman', Times, serif;">Edit Profile</h1>
+        <h1 class="font-weight-semi-bold text-uppercase mb-3" style="font-family:Georgia, 'Times New Roman', Times, serif;">Edit Product</h1>
     </div>
 </div>
 <!-- Page Header End -->
@@ -59,7 +59,7 @@
                 <main class="col-md-9">
                     <article class="card shadow-lg">
                     <header class="card-header">
-                        <strong class="d-inline-block mr-3">Edit Profile Page</strong>
+                        <strong class="d-inline-block mr-3">Edit Product Page</strong>
                        
                     </header>
                     <div class="card-body">
